2015-01-06  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (DatabaseTransaction): New wrapper class
	around a database transaction.
	* lib/Database.cpp: Use database transactions throughout.
	(DatabaseTransaction): Added implementation.

2016-01-06  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::newFeatureGroup): Refine to take
	a set of FeatureSetID rather than vector.
	(Database::addPasses): Removed method.
	(Database::newPassSequence): Method now takes a list of passes to
	add to the database.
	* include/mageec/Types.h (CompilationID FeatureSetID FeatureGroupID)
	(PassID PassSequenceID ParameterSetID ParameterGroupID): Redefined
	types to be uint64_t so that they can store a hash.
	* include/mageec/Util.h (read64LE wrte64LE): Added functions.
	* lib/Database.cpp (create_feature_set_table)
	(create_feature_group_table create_parameter_set_table)
	(create_pass_sequence_table): Remove query strings to create
	some tables.
	(Database::init_db): Remove creation of some tables.
	(Database::newFeatureSet): The returned FeatureSetID is now a hash of
	the input features, the database no longer contains duplicate feature
	sets.
	(Database::newFeatureGroup): Returned FeatureGroupID is now a hash,
	the database no longer contains duplicate feature groups.
	(Database::newParameterSet): The returned ParameterSetID is now a
	hash of the input features, the database no longer contains duplicate
	parameter sets.
	(Database::newPassSequence): The returned PassSequenceID is now a 
	hash of the input passes. The database no longer contains duplicate
	pass sequences.
	* lib/Main.cpp (main): Updated to use new interfaces.
	* lib/Util.cpp (read64LE write64LE): Added function implementations.

2016-01-05  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec/Util.h (uint64_t crc64): Declare crc64.
	* lib/Util.cpp (uint64_t crc64): Add crc64 implementation.

2016-01-05  Edward Jones  <ed.jones@embecosm.com>
